--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
+    "build": "next build && npm run build-storybook",
     "start": "next start",
     "export": "next build && next export",
     "lint": "next lint && stylelint \"source/**/*.css\"",
@@ -15,7 +15,7 @@
     "test": "npm run lint && npm run tsc",
     "component": "plop",
     "storybook": "storybook dev -p 6006",
-    "build-storybook": "storybook build",
+    "build-storybook": "storybook build -o ./public/storybook",
     "build-icons": "svgr --out-dir source/01-global/icon/icons -- source/01-global/icon/svgs"
   },
   "browserslist": [
