try vercel storybook integration

--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "test": "npm run lint && npm run tsc",
     "component": "plop",
     "storybook": "storybook dev -p 6006",
-    "build-storybook": "storybook build -o ./public/storybook",
+    "build-storybook": "storybook build",
     "build-icons": "svgr --out-dir source/01-global/icon/icons -- source/01-global/icon/svgs"
   },
   "browserslist": [
